--- a/spring-cache-sample/pom.xml
+++ b/spring-cache-sample/pom.xml
@@ -39,9 +39,21 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <!-- -->
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
+        </dependency>
+        <!-- -->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
 
         <dependency>
