--- a/spring-cache-sample/src/main/resources/application.yml
+++ b/spring-cache-sample/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   jpa:
     show-sql: true
     hibernate.ddl-auto: create-drop
-    ## database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
   datasource:
     url: jdbc:postgresql://localhost:5432/testdb
     username: ogun.heper
